<resources>
    <string name="app_name">SharpDevelopersTestJava</string>
    <string name="app_error_dismiss" translatable="false">OK</string>
    <string name="app_navigation_drawer_open">Open navigation drawer</string>
    <string name="app_navigation_drawer_close">Close navigation drawer</string>

    <string name="enterEmail">Enter Your Email</string>
    <string name="enterUsername">Enter Your Username</string>
    <string name="login">Login</string>
    <string name="login_or">Login or</string>
    <string name="register">
        <u>Register</u>
    </string>
    <string name="registerUsual">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="username_error">Username should contain at least 3 letters</string>
    <string name="password_error">Password should contain at least 6 letters</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="different_password">You entered two different passwords. Please try again.
    </string>
    <string name="email_exists">A user with that email already exists</string>
    <string name="log_out">Log Out</string>

    <string name="history_activity">Transactions History</string>
    <string name="transaction_date">Transaction Date:</string>
    <string name="recipient_name">Recipient Name:</string>
    <string name="amount_send">Amount Send:</string>
    <string name="user_balance">User Balance:</string>
    <string name="choose_recipient">Choose Recipient</string>
    <string name="enter_amount_to_transfer">Enter Amount To Transfer</string>
    <string name="recipient_id">Recipient ID:</string>
    <string name="new_transaction">New Transaction</string>
    <string name="recipient_error">Choose Recipient Name</string>
    <string name="balance_limit_error">Not enough balance for transaction</string>
    <string name="enter_amount_error">Enter an amount to transfer</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="registration_completed">Registered Completed</string>
    <string name="ok">OK</string>
    <string name="transaction_completed">Transaction successfully completed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="select_basis">Select this transaction as a basis for a new transaction?</string>
    <string name="filter_title">Filter</string>
    <string name="filter_choice_description">Choose the type of sorting for the transactions history list
    </string>
    <string name="action_settings">Settings</string>
    <string name="search_transaction">Search transaction</string>
    <string name="transfer">Transfer</string>
    <string name="minus_transaction">Can\'t use receive transactions as basis</string>
    <string name="self_transfer">Can\'t make transaction to yourself</string>
    <string name="not_found_user">Username is not registered in Database</string>
    <string name="empty_history">Transactions history is empty</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
</resources>
