<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_16"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginRight="@dimen/dimen_4"
        android:layout_marginTop="@dimen/dimen_16"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="@dimen/dimen_8"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/transactionIdText"
                tools:text="Id:123"
                android:padding="@dimen/dimen_8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_corner_card_background"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_8">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction_date"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipient_name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount_send"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_balance"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/transactionDateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="15-03-2018"/>

                    <TextView
                        android:id="@+id/transactionUsernameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="name"/>

                    <TextView
                        android:id="@+id/transactionAmountText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="100"/>

                    <TextView
                        android:id="@+id/transactionBalanceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="500"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>